ssl-antlr-calculator/analizador/.antlr/JuegoParser.java
// Generated from c:/Users/guada/ssl-antlr-calculator/analizador/Juego.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class JuegoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		JUEGO=1, ESCENA=2, MOSTRAR=3, LEER=4, SI=5, SALTAR=6, IGUAL=7, LLAVE_A=8, 
		LLAVE_C=9, PC=10, ID=11, INT=12, TEXTO=13, WS=14;
	public static final int
		RULE_prog = 0, RULE_juego = 1, RULE_escenas = 2, RULE_escena = 3, RULE_acciones = 4, 
		RULE_imprimir = 5, RULE_leer = 6, RULE_condicion = 7, RULE_comparacion = 8, 
		RULE_saltarAct = 9, RULE_nombre = 10, RULE_valor = 11;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "juego", "escenas", "escena", "acciones", "imprimir", "leer", 
			"condicion", "comparacion", "saltarAct", "nombre", "valor"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'juego'", "'escena'", "'mostrar'", "'leer'", "'si'", "'saltar'", 
			"'=='", "'{'", "'}'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "JUEGO", "ESCENA", "MOSTRAR", "LEER", "SI", "SALTAR", "IGUAL", 
			"LLAVE_A", "LLAVE_C", "PC", "ID", "INT", "TEXTO", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Juego.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JuegoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public JuegoContext juego() {
			return getRuleContext(JuegoContext.class,0);
		}
		public TerminalNode EOF() { return getToken(JuegoParser.EOF, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JuegoListener ) ((JuegoListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JuegoListener ) ((JuegoListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(24);
			juego();
			setState(25);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JuegoContext extends ParserRuleContext {
		public TerminalNode JUEGO() { return getToken(JuegoParser.JUEGO, 0); }
		public NombreContext nombre() {
			return getRuleContext(NombreContext.class,0);
		}
		public TerminalNode LLAVE_A() { return getToken(JuegoParser.LLAVE_A, 0); }
		public EscenasContext escenas() {
			return getRuleContext(EscenasContext.class,0);
		}
		public TerminalNode LLAVE_C() { return getToken(JuegoParser.LLAVE_C, 0); }
		public JuegoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_juego; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JuegoListener ) ((JuegoListener)listener).enterJuego(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JuegoListener ) ((JuegoListener)listener).exitJuego(this);
		}
	}

	public final JuegoContext juego() throws RecognitionException {
		JuegoContext _localctx = new JuegoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_juego);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(27);
			match(JUEGO);
			setState(28);
			nombre();
			setState(29);
			match(LLAVE_A);
			setState(30);
			escenas();
			setState(31);
			match(LLAVE_C);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EscenasContext extends ParserRuleContext {
		public List<EscenaContext> escena() {
			return getRuleContexts(EscenaContext.class);
		}
		public EscenaContext escena(int i) {
			return getRuleContext(EscenaContext.class,i);
		}
		public EscenasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_escenas; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JuegoListener ) ((JuegoListener)listener).enterEscenas(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JuegoListener ) ((JuegoListener)listener).exitEscenas(this);
		}
	}

	public final EscenasContext escenas() throws RecognitionException {
		EscenasContext _localctx = new EscenasContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_escenas);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ESCENA) {
				{
				{
				setState(33);
				escena();
				}
				}
				setState(38);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EscenaContext extends ParserRuleContext {
		public TerminalNode ESCENA() { return getToken(JuegoParser.ESCENA, 0); }
		public NombreContext nombre() {
			return getRuleContext(NombreContext.class,0);
		}
		public TerminalNode LLAVE_A() { return getToken(JuegoParser.LLAVE_A, 0); }
		public AccionesContext acciones() {
			return getRuleContext(AccionesContext.class,0);
		}
		public TerminalNode LLAVE_C() { return getToken(JuegoParser.LLAVE_C, 0); }
		public EscenaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_escena; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JuegoListener ) ((JuegoListener)listener).enterEscena(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JuegoListener ) ((JuegoListener)listener).exitEscena(this);
		}
	}

	public final EscenaContext escena() throws RecognitionException {
		EscenaContext _localctx = new EscenaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_escena);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			match(ESCENA);
			setState(40);
			nombre();
			setState(41);
			match(LLAVE_A);
			setState(42);
			acciones();
			setState(43);
			match(LLAVE_C);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AccionesContext extends ParserRuleContext {
		public List<ImprimirContext> imprimir() {
			return getRuleContexts(ImprimirContext.class);
		}
		public ImprimirContext imprimir(int i) {
			return getRuleContext(ImprimirContext.class,i);
		}
		public List<LeerContext> leer() {
			return getRuleContexts(LeerContext.class);
		}
		public LeerContext leer(int i) {
			return getRuleContext(LeerContext.class,i);
		}
		public List<CondicionContext> condicion() {
			return getRuleContexts(CondicionContext.class);
		}
		public CondicionContext condicion(int i) {
			return getRuleContext(CondicionContext.class,i);
		}
		public List<SaltarActContext> saltarAct() {
			return getRuleContexts(SaltarActContext.class);
		}
		public SaltarActContext saltarAct(int i) {
			return getRuleContext(SaltarActContext.class,i);
		}
		public AccionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_acciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JuegoListener ) ((JuegoListener)listener).enterAcciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JuegoListener ) ((JuegoListener)listener).exitAcciones(this);
		}
	}

	public final AccionesContext acciones() throws RecognitionException {
		AccionesContext _localctx = new AccionesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_acciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 120L) != 0)) {
				{
				setState(49);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case MOSTRAR:
					{
					setState(45);
					imprimir();
					}
					break;
				case LEER:
					{
					setState(46);
					leer();
					}
					break;
				case SI:
					{
					setState(47);
					condicion();
					}
					break;
				case SALTAR:
					{
					setState(48);
					saltarAct();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImprimirContext extends ParserRuleContext {
		public TerminalNode MOSTRAR() { return getToken(JuegoParser.MOSTRAR, 0); }
		public TerminalNode TEXTO() { return getToken(JuegoParser.TEXTO, 0); }
		public TerminalNode PC() { return getToken(JuegoParser.PC, 0); }
		public ImprimirContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imprimir; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JuegoListener ) ((JuegoListener)listener).enterImprimir(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JuegoListener ) ((JuegoListener)listener).exitImprimir(this);
		}
	}

	public final ImprimirContext imprimir() throws RecognitionException {
		ImprimirContext _localctx = new ImprimirContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_imprimir);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(MOSTRAR);
			setState(55);
			match(TEXTO);
			setState(56);
			match(PC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LeerContext extends ParserRuleContext {
		public TerminalNode LEER() { return getToken(JuegoParser.LEER, 0); }
		public NombreContext nombre() {
			return getRuleContext(NombreContext.class,0);
		}
		public TerminalNode PC() { return getToken(JuegoParser.PC, 0); }
		public LeerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_leer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JuegoListener ) ((JuegoListener)listener).enterLeer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JuegoListener ) ((JuegoListener)listener).exitLeer(this);
		}
	}

	public final LeerContext leer() throws RecognitionException {
		LeerContext _localctx = new LeerContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_leer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(LEER);
			setState(59);
			nombre();
			setState(60);
			match(PC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CondicionContext extends ParserRuleContext {
		public TerminalNode SI() { return getToken(JuegoParser.SI, 0); }
		public ComparacionContext comparacion() {
			return getRuleContext(ComparacionContext.class,0);
		}
		public TerminalNode SALTAR() { return getToken(JuegoParser.SALTAR, 0); }
		public NombreContext nombre() {
			return getRuleContext(NombreContext.class,0);
		}
		public TerminalNode PC() { return getToken(JuegoParser.PC, 0); }
		public CondicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JuegoListener ) ((JuegoListener)listener).enterCondicion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JuegoListener ) ((JuegoListener)listener).exitCondicion(this);
		}
	}

	public final CondicionContext condicion() throws RecognitionException {
		CondicionContext _localctx = new CondicionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_condicion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(SI);
			setState(63);
			comparacion();
			setState(64);
			match(SALTAR);
			setState(65);
			nombre();
			setState(66);
			match(PC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComparacionContext extends ParserRuleContext {
		public NombreContext nombre() {
			return getRuleContext(NombreContext.class,0);
		}
		public TerminalNode IGUAL() { return getToken(JuegoParser.IGUAL, 0); }
		public ValorContext valor() {
			return getRuleContext(ValorContext.class,0);
		}
		public ComparacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JuegoListener ) ((JuegoListener)listener).enterComparacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JuegoListener ) ((JuegoListener)listener).exitComparacion(this);
		}
	}

	public final ComparacionContext comparacion() throws RecognitionException {
		ComparacionContext _localctx = new ComparacionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_comparacion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			nombre();
			setState(69);
			match(IGUAL);
			setState(70);
			valor();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SaltarActContext extends ParserRuleContext {
		public TerminalNode SALTAR() { return getToken(JuegoParser.SALTAR, 0); }
		public NombreContext nombre() {
			return getRuleContext(NombreContext.class,0);
		}
		public TerminalNode PC() { return getToken(JuegoParser.PC, 0); }
		public SaltarActContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_saltarAct; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JuegoListener ) ((JuegoListener)listener).enterSaltarAct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JuegoListener ) ((JuegoListener)listener).exitSaltarAct(this);
		}
	}

	public final SaltarActContext saltarAct() throws RecognitionException {
		SaltarActContext _localctx = new SaltarActContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_saltarAct);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(SALTAR);
			setState(73);
			nombre();
			setState(74);
			match(PC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NombreContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(JuegoParser.ID, 0); }
		public NombreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nombre; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JuegoListener ) ((JuegoListener)listener).enterNombre(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JuegoListener ) ((JuegoListener)listener).exitNombre(this);
		}
	}

	public final NombreContext nombre() throws RecognitionException {
		NombreContext _localctx = new NombreContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_nombre);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ValorContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(JuegoParser.INT, 0); }
		public TerminalNode TEXTO() { return getToken(JuegoParser.TEXTO, 0); }
		public ValorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JuegoListener ) ((JuegoListener)listener).enterValor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JuegoListener ) ((JuegoListener)listener).exitValor(this);
		}
	}

	public final ValorContext valor() throws RecognitionException {
		ValorContext _localctx = new ValorContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_valor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			_la = _input.LA(1);
			if ( !(_la==INT || _la==TEXTO) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}